--- a/frontend/html-css/basics/cheat-sheet/index.html
+++ b/frontend/html-css/basics/cheat-sheet/index.html
@@ -174,6 +174,20 @@
 				</datalist>
 			</div>
 			<div>
+				<label for="progress">File progress</label>
+				<progress
+					id="progress"
+					max="100"
+					min="0"
+					low="30"
+					high="90"
+					optimal="70"
+					value="70"
+				>
+					70%
+				</progress>
+			</div>
+			<div>
 				<label for="message">Message us</label>
 				<textarea name="message" id="message"></textarea>
 			</div>
